@@ -9,8 +9,7 @@ i2cset \- set I2C registers
 .I i2cbus
 .I chip-address
 .I data-address
-.I value
-.RI [ "mode " [ mask ]]
+.RI [ "value " [ "mode " [ mask ]]]
 .br
 .B i2cset
 .B -V
@@ -38,13 +37,19 @@ from the user before messing with the I2C bus. When this flag is used, it
 will perform the operation directly. This is mainly meant to be used in
 scripts.
 .PP
-There are four required options to i2cset. \fIi2cbus\fR indicates the number
+There are three required options to i2cset. \fIi2cbus\fR indicates the number
 or name of the I2C bus to be scanned.  This number should correspond to one of
 the busses listed by \fIi2cdetect -l\fR. \fIchip-address\fR specifies the
 address of the chip on that bus, and is an integer between 0x03 and 0x77.
 \fIdata-address\fR specifies the address on that chip to write to, and is an
-integer between 0x00 and 0xFF. \fIvalue\fR is the value to write to that
-location on the chip.
+integer between 0x00 and 0xFF.
+.PP
+The \fIvalue\fR parameter, if specified, is the value to write to that
+location on the chip. If this parameter is omited, then a short write is
+issued. For most chips, it simply sets an internal pointer to the target
+location, but doesn't actually write to that location. For a few chips
+though, in particular simple ones with a single register, this short write
+is an actual write.
 .PP
 The \fImode\fR parameter, if specified, is one of the letters \fBb\fP or
 \fBw\fP, corresponding to a write size of a single byte or a 16-bit word,
