@@ -14,6 +14,7 @@ SVN
           Shorten the usage message
           Restrict the chip address to 0x03-0x77
           Split the code into several functions for clarity
+          Add support for short writes (SMBus send byte)
 
 3.0.1 (2008-04-04)
   Drop the trailing .pl from all perl script names
